--- a/package.json
+++ b/package.json
@@ -6,5 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Oğuzhan Eren"
+  "author": "Oğuzhan Eren",
+  "devDependencies": {
+    "fs-extra": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-tslint": "^6.1.3",
+    "gulp-typescript": "^3.1.3",
+    "merge2": "^1.0.2",
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.9"
+  }
 }
